fixed navbar spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ nav {
   margin-top: 0;
 }
 
+#navbar-spacing {
+  width: 100%;
+  height: 34px;
+}
+
 .nav-controls {
   float: left;
 }
